@@ -31,6 +31,12 @@
 
 <h2>Changelog</h2>
 
+<h3>Version 0.3.3 (Dec 15 2007)</h3>
+<ul><li>changed api slightly for wiki_links_class_func (see Creole10 doc strings)</li>
+<li>added suport for custom urls for wiki links</li>
+<li>added support for macros with bodies (&lt;&lt;macro arg_string&gt;&gt;the body&lt;&lt;/macro&gt;&gt;)</li>
+<li>removed use of global element_store and thread.local()</li></ul>
+
 <h3>Version 0.3.2 (Nov 28 2007)</h3>
 <ul><li>line breaks (\\) can now be escaped with a tilde</li>
 <li>added macro support (&lt;&lt;macro arg_sring&gt;&gt;)</li>
