@@ -27,7 +27,7 @@
 </div>
    <div id="bd">
 	<div class="yui-g">
-<h3><a href="http://pages.videotron.com/shday/Creole/apidocs/index.html">API documentation</a></h3>
+<h3><a href="http://pages.videotron.com/shday/Creoleparser/apidocs/index.html">API documentation</a></h3>
 <h2>Basic Usage</h2>
 <pre>&gt;&gt;&gt; from creoleparser import text2html
 </pre>
